--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "bcrypt": "latest",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.10"
+  },
+  "devDependencies": {
+    "chai": "*",
+    "chai-http": "^2.0.1"
   }
 }
